[fixes #17966617] Truncate csv project name; trigger errors on import

--- a/app/stylesheets/partials/_form.sass
+++ b/app/stylesheets/partials/_form.sass
@@ -514,7 +514,6 @@ h3.form_heading
     cursor: pointer
     font-size: 12px
     font-weight: bold
-    padding: 10px
     text-transform: none
     +pie-clearfix
 
